REHS/rehs3/rehs3/training_emails/no_dir/ticket#89760/UID#89311/body.txt

Fri Jun 08 15:38:41 2018: Request 89760 was acted upon.
 Transaction: Queue changed from 0-Help to 0-SDSC by carmanh
       Queue: 0-SDSC
     Subject: Syntax error but only with SBATCH
       Owner: Nobody
  Requestors: skimble@towson.edu
      Status: open
 Ticket <URL: https://tickets.xsede.org/Ticket/Display.html?id=89760 >


Dear Help:


I am trying to run the attached python script. When I test it on the front end, it works, but when I sbatch it I get:


  File "/var/spool/slurmd/job16840052/slurm_script", line 10
    ./radtag0_trimmer.py -p Kimble_RADSeq_S1_S1_L001_R2_001.fastq ND_barcodes5.txt Kimble_RADSeq_S1_S1_L001_R2_001.fastq
    ^
SyntaxError: invalid syntax

Can you help me figure out what is wrong?


Thanks,

Steve


Steve Kimble

Clinical Assistant Professor, Towson University

skimble@towson.edu

https://www.towson.edu/fcsm/departments/biology/facultystaff/skimble.html
 
